Paginator added, work in progress

--- a/apps/dashboard/project.json
+++ b/apps/dashboard/project.json
@@ -19,10 +19,10 @@
           "apps/dashboard/src/favicon.ico",
           "apps/dashboard/src/assets"
         ],
-        "styles": ["apps/dashboard/src/styles.scss"],
-            "stylePreprocessorOptions": {
-              "includePaths": ["libs/theme/src/lib/"]
-            },
+        "styles": [
+          "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+          "apps/dashboard/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
