--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "start": "nx serve",
     "build": "nx build",
-    "deploy": "npm run build --prod && cp ./dist/apps/dashboard/index.html ./dist/apps/dashboard/200.html && npx surge ./dist/apps/dashboard/ https://astro-tracker-application.surge.sh/",
+    "deploy": "npm run build --prod && cp ./dist/apps/dashboard/index.html ./dist/apps/dashboard/200.html && npx surge ./dist/apps/dashboard/ https://sample-portal-demo.surge.sh/",
     "serve:api": "json-server server/db.json",
     "serve:all": "concurrently \"json-server server/db.json\" \"ng serve\"",
     "test": "nx test"
